[gd_scene load_steps=9 format=3 uid="uid://7jsmteu31g2u"]

[ext_resource type="Script" path="res://char_creator_pf2e/char_creator.gd" id="1_24b7v"]
[ext_resource type="PackedScene" uid="uid://b7ese1o60fiwj" path="res://player.tscn" id="2_x0ats"]
[ext_resource type="Script" path="res://char_creator_pf2e/char_creator_ui.gd" id="3_x6erg"]
[ext_resource type="ButtonGroup" uid="uid://g50a2f5rcy1s" path="res://char_creator_pf2e/ancestry_bg.tres" id="4_nampv"]
[ext_resource type="ButtonGroup" uid="uid://c6geg3x6vrurd" path="res://char_creator_pf2e/class_bg.tres" id="5_vkdrx"]
[ext_resource type="ButtonGroup" uid="uid://2bvh68ktojbt" path="res://char_creator_pf2e/background_bg.tres" id="6_h047k"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kwrdj"]
size = Vector3(20, 1, 20)

[sub_resource type="BoxMesh" id="BoxMesh_famp8"]

[node name="Character Creator" type="Node3D"]
script = ExtResource("1_24b7v")

[node name="Ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_kwrdj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(20, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0)
mesh = SubResource("BoxMesh_famp8")

[node name="Player" parent="." instance=ExtResource("2_x0ats")]
transform = Transform3D(0.671229, 0, -0.74125, 0, 1, 0, 0.74125, 0, 0.671229, 1.30956, 0.492664, 0)

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.93082, 0.365478, 0, -0.365478, 0.93082, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.075, 1.115, 3.454)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 9.53266, 4)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_x6erg")

[node name="Grid" type="GridContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="AncestryPanel" type="Panel" parent="UI/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/Grid/AncestryPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.065
offset_top = 18.0
offset_bottom = -0.120007
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Choose your Ancestry"
horizontal_alignment = 1

[node name="Grid" type="GridContainer" parent="UI/Grid/AncestryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 51.0
offset_right = -6.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
columns = 2

[node name="DwarfButton" type="Button" parent="UI/Grid/AncestryPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_nampv")
text = "Dwarf"

[node name="ElfButton" type="Button" parent="UI/Grid/AncestryPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Elf"

[node name="GnomeButton" type="Button" parent="UI/Grid/AncestryPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_nampv")
text = "Gnome"

[node name="GoblinButton" type="Button" parent="UI/Grid/AncestryPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_nampv")
text = "Goblin"

[node name="HalflingButton" type="Button" parent="UI/Grid/AncestryPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_nampv")
text = "Halfling"

[node name="HumanButton" type="Button" parent="UI/Grid/AncestryPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_nampv")
text = "Human"

[node name="LeshyButton" type="Button" parent="UI/Grid/AncestryPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_nampv")
text = "Leshy"

[node name="OrcButton" type="Button" parent="UI/Grid/AncestryPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("4_nampv")
text = "Orc"

[node name="ClassPanel" type="Panel" parent="UI/Grid"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/Grid/ClassPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.065
offset_top = 18.0
offset_bottom = -0.120007
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Choose your Class"
horizontal_alignment = 1

[node name="Grid" type="GridContainer" parent="UI/Grid/ClassPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 51.0
offset_right = -6.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
columns = 2

[node name="BardButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_vkdrx")
text = "Bard"

[node name="ClericButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_vkdrx")
text = "Cleric"

[node name="DruidButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_vkdrx")
text = "Druid"

[node name="FighterButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_vkdrx")
text = "Fighter"

[node name="RangerButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_vkdrx")
text = "Ranger"

[node name="RogueButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_vkdrx")
text = "Rogue"

[node name="WitchButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_vkdrx")
text = "Witch"

[node name="WizardButton" type="Button" parent="UI/Grid/ClassPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("5_vkdrx")
text = "Wizard"

[node name="BackgroundPanel" type="Panel" parent="UI/Grid"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/Grid/BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.065
offset_top = 18.0
offset_bottom = -0.120007
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Choose your Background"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Grid/BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.016
anchor_top = 0.09
anchor_right = 0.984
anchor_bottom = 0.988
offset_left = -0.128
offset_top = -0.320004
offset_right = 0.127991
offset_bottom = -0.223999
grow_horizontal = 2
grow_vertical = 2

[node name="Grid" type="GridContainer" parent="UI/Grid/BackgroundPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="AcolyteButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Acolyte"

[node name="AcrobatButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Acrobat"

[node name="AnimalWhispererButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Animal
Whisperer"
clip_text = true

[node name="ArtisanButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Artisan"

[node name="ArtistButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Artist"

[node name="BanditButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Bandit"

[node name="BarkeepButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Barkeep"

[node name="BarristerButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Barrister"

[node name="BountyHunterButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Bounty
Hunter"

[node name="CharlatanButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Charlatan"

[node name="CookButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Cook"

[node name="CriminalButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Criminal"

[node name="CultistButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Cultist"

[node name="DetectiveButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Detective"

[node name="EmissaryButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Emissary"

[node name="EntertainerButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Entertainer"

[node name="FarmhandButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Farmhand"

[node name="FieldMedicButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Field Medic"

[node name="FortuneTellerButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Fortune
Teller"

[node name="GamblerButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Gambler"

[node name="GladiatorButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Gladiator"

[node name="GuardButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Guard"

[node name="HerbalistButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Herbalist"

[node name="HermitButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Hermit"

[node name="HunterButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Hunter"

[node name="LaborerButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Laborer"

[node name="MartialDiscipleButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Martial
Disciple"

[node name="MerchantButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Merchant"

[node name="MinerButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Miner"

[node name="NobleButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Noble"

[node name="NomadButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Nomad"

[node name="PrisonerButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Prisoner"

[node name="SailorButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Sailor"

[node name="ScholarButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Scholar"

[node name="ScoutButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Scout"

[node name="StreetUrchinButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Street Urchin"

[node name="TeacherButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Teacher"

[node name="TinkerButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Tinker"

[node name="WarriorButton" type="Button" parent="UI/Grid/BackgroundPanel/ScrollContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("6_h047k")
text = "Warrior"

[node name="SpacePanel" type="ColorRect" parent="UI/Grid"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="MiddlePanel" type="VBoxContainer" parent="UI/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="BackButton" type="Button" parent="UI/Grid/MiddlePanel"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="NextButton" type="Button" parent="UI/Grid/MiddlePanel"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Next"

[connection signal="ancestry_changed" from="UI" to="." method="_on_ui_ancestry_changed"]
[connection signal="background_changed" from="UI" to="." method="_on_ui_background_changed"]
[connection signal="class_changed" from="UI" to="." method="_on_ui_class_changed"]
[connection signal="toggled" from="UI/Grid/AncestryPanel/Grid/DwarfButton" to="UI" method="_on_dwarf_button_toggled"]
[connection signal="toggled" from="UI/Grid/AncestryPanel/Grid/ElfButton" to="UI" method="_on_elf_button_toggled"]
[connection signal="toggled" from="UI/Grid/AncestryPanel/Grid/GnomeButton" to="UI" method="_on_gnome_button_toggled"]
[connection signal="toggled" from="UI/Grid/AncestryPanel/Grid/GoblinButton" to="UI" method="_on_goblin_button_toggled"]
[connection signal="toggled" from="UI/Grid/AncestryPanel/Grid/HalflingButton" to="UI" method="_on_halfling_button_toggled"]
[connection signal="toggled" from="UI/Grid/AncestryPanel/Grid/HumanButton" to="UI" method="_on_human_button_toggled"]
[connection signal="toggled" from="UI/Grid/AncestryPanel/Grid/LeshyButton" to="UI" method="_on_leshy_button_toggled"]
[connection signal="toggled" from="UI/Grid/AncestryPanel/Grid/OrcButton" to="UI" method="_on_orc_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/BardButton" to="UI" method="_on_bard_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/ClericButton" to="UI" method="_on_cleric_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/DruidButton" to="UI" method="_on_druid_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/FighterButton" to="UI" method="_on_fighter_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/RangerButton" to="UI" method="_on_ranger_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/RogueButton" to="UI" method="_on_rogue_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/WitchButton" to="UI" method="_on_witch_button_toggled"]
[connection signal="toggled" from="UI/Grid/ClassPanel/Grid/WizardButton" to="UI" method="_on_wizard_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/AcolyteButton" to="UI" method="_on_acolyte_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/AcrobatButton" to="UI" method="_on_acrobat_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/AnimalWhispererButton" to="UI" method="_on_animal_whisperer_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/ArtisanButton" to="UI" method="_on_artisan_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/ArtistButton" to="UI" method="_on_artist_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/BanditButton" to="UI" method="_on_bandit_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/BarkeepButton" to="UI" method="_on_barkeep_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/BarristerButton" to="UI" method="_on_barrister_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/BountyHunterButton" to="UI" method="_on_bounty_hunter_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/CharlatanButton" to="UI" method="_on_charlatan_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/CookButton" to="UI" method="_on_cook_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/CriminalButton" to="UI" method="_on_criminal_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/CultistButton" to="UI" method="_on_cultist_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/DetectiveButton" to="UI" method="_on_detective_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/EmissaryButton" to="UI" method="_on_emissary_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/EntertainerButton" to="UI" method="_on_entertainer_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/FarmhandButton" to="UI" method="_on_farmhand_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/FieldMedicButton" to="UI" method="_on_field_medic_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/FortuneTellerButton" to="UI" method="_on_fortune_teller_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/GamblerButton" to="UI" method="_on_gambler_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/GladiatorButton" to="UI" method="_on_gladiator_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/GuardButton" to="UI" method="_on_guard_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/HerbalistButton" to="UI" method="_on_herbalist_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/HermitButton" to="UI" method="_on_hermit_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/HunterButton" to="UI" method="_on_hunter_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/LaborerButton" to="UI" method="_on_laborer_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/MartialDiscipleButton" to="UI" method="_on_martial_disciple_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/MerchantButton" to="UI" method="_on_merchant_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/MinerButton" to="UI" method="_on_miner_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/NobleButton" to="UI" method="_on_noble_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/NomadButton" to="UI" method="_on_nomad_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/PrisonerButton" to="UI" method="_on_prisoner_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/SailorButton" to="UI" method="_on_sailor_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/ScholarButton" to="UI" method="_on_scholar_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/ScoutButton" to="UI" method="_on_scout_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/StreetUrchinButton" to="UI" method="_on_street_urchin_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/TeacherButton" to="UI" method="_on_teacher_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/TinkerButton" to="UI" method="_on_tinker_button_toggled"]
[connection signal="toggled" from="UI/Grid/BackgroundPanel/ScrollContainer/Grid/WarriorButton" to="UI" method="_on_warrior_button_toggled"]
[connection signal="pressed" from="UI/Grid/MiddlePanel/BackButton" to="UI" method="_on_back_button_pressed"]
[connection signal="pressed" from="UI/Grid/MiddlePanel/NextButton" to="UI" method="_on_next_button_pressed"]
